# learning

./: .gitignore  .prettierrc.json  README.md  package.json  predict.ipynb  pyproject.toml  requirements.txt  server.py  transfer_learning.ipynb
frontend/: app.ts  guard.ts  historyRoutes.ts  interface.ts  jest.config.js  knexfile.ts  loginRoutes.ts  package-lock.json  package.json  testing.ts  userRoutes.ts  util.ts
frontend/controllers/: HistoryController.test.ts  HistoryController.ts
frontend/migrations/: 20240723225428_create-user.ts  20240724222117_create-club.ts  20240724223837_create-collection.ts
frontend/public/: history.html  history.js  index.css  index.html  index.js
frontend/seeds/: create-teachers-and-students.ts
frontend/services/: HistoryService.ts
